--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=0.7">
-    <meta name="description" content="RTKFinder is a web application for RTK (Remembering the Kanji) learners to look up kanji through their primitives.">
+    <meta name="description" content="RTKFinder is a web tool for RTK (Remembering the Kanji) learners to look up kanji by keyword.">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="preload" href="<%= require('@/assets/fonts/ubuntu.woff2') %>" as="font" crossorigin='anonymous'>
     <link rel="preload" href="<%= require('@/assets/fonts/KosugiMaru-Regular.woff2') %>" as="font" crossorigin='anonymous'>
